--- a/protected-method-scheduled-job/spring-sec-32/pom.xml
+++ b/protected-method-scheduled-job/spring-sec-32/pom.xml
@@ -17,18 +17,10 @@
         </license>
     </licenses>
 
-    <repositories>
-        <repository>
-            <id>spring-milestone</id>
-            <name>SpringSource Milestone Repository</name>
-            <url>http://repo.springsource.org/libs-milestone</url>
-        </repository>
-    </repositories>
-
     <properties>
         <slf4j.version>1.6.4</slf4j.version>
         <spring.version>3.2.5.RELEASE</spring.version>
-        <spring.security.version>3.2.0.RC2</spring.security.version>
+        <spring.security.version>3.2.0.RELEASE</spring.security.version>
         <build.profile.id>dev</build.profile.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.7</jdk.version>
