--- a/property-value-beans/src/main/resources/application.properties
+++ b/property-value-beans/src/main/resources/application.properties
@@ -4,3 +4,22 @@ app.production.mode.enabled=false
 app.server.port=8080
 app.server.protocol=http
 app.server.host=localhost
+
+git.tags=${git.tags}
+git.branch=${git.branch}
+git.dirty=${git.dirty}
+git.remote.origin.url=${git.remote.origin.url}
+
+git.commit.id=${git.commit.id}
+git.commit.id.abbrev=${git.commit.id.abbrev}
+git.commit.id.describe=${git.commit.id.describe}
+git.commit.id.describe-short=${git.commit.id.describe-short}
+git.commit.user.name=${git.commit.user.name}
+git.commit.user.email=${git.commit.user.email}
+git.commit.message.full=${git.commit.message.full}
+git.commit.message.short=${git.commit.message.short}
+git.commit.time=${git.commit.time}
+
+git.build.user.name=${git.build.user.name}
+git.build.user.email=${git.build.user.email}
+git.build.time=${git.build.time}
